<resources>
    // khong dich
    <string name="app_name" translatable="false">TourIntro</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="LblVietNam" translatable="false">Tiếng Việt</string>
    <string name="LblJapan" translatable="false">日本語</string>
    <string name="LblEnglish" translatable="false">English</string>
    <string name="LblChina" translatable="false">中文</string>
    <string name="LblKorea" translatable="false">한국어</string>
    <string name="LblFrance" translatable="false">Français</string>
    <string name="LblGermany" translatable="false">Deutsche</string>
    <string name="LblIndonesia" translatable="false">Indonesia</string>
    <string name="LblRussia" translatable="false">Pусский</string>
    <string name="google_client_id" translatable="false">229845774338-4ogbuk4ncm45cgt6mjin2pmgfcdrlhjn.apps.googleusercontent.com</string>
    //FACEBOOK
    <string name="name" translatable="false">name</string>
    <string name="id" translatable="false">id</string>
    <string name="email" translatable="false">email</string>
    <string name="link" translatable="false">link</string>
    <string name="gender" translatable="false">gender</string>
    <string name="fields" translatable="false">fields</string>
    <string name="fields_name" translatable="false">id,name,link,email</string>
    <string name="data" translatable="false">data</string>
    <string name="transitionName1" translatable="false">transition1</string>
    <string name="transitionName2" translatable="false">transition2</string>
    <string name="transitionName3" translatable="false">transition3</string>
    <string name="facebook_app_id" translatable="false">383267972718761</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb383267972718761</string>


    // can dich
    <string name="label_btn_sign_in_with_google">Sign in with Google</string>
    <string name="label_btn_login_in_with_Facebook">Login with Facebook</string>
    <string name="label1_btn_get_started">Get Started</string>
    <string name="title_alert">Would you like to hear the entire trip schedule?</string>
    <string name="content_alert">We will announce all the historical information that you will go through, hoping you will have a better experience.</string>
    <string name="label_btn_Yes">Yes</string>
    <string name="label_btn_No">No</string>
    <string name="hint_edtSearch">Search...</string>
    <string name="hint_edt_comment">Comment</string>
    <string name="label_btn_Submit">Submit</string>
    <string name="title_dialog_rating">In order to improve the quality of our service, please let us know about your experience.</string>
    <string name="lblSeeMore">See more</string>
    <string name="logout">Do you want to log out?</string>
    <string name="text_dialog_warning_internet">Please check your internet connection!</string>
    <string name="title_dialog_warning_internet">Looks like you don\'t have an Internet connection</string>
    <string name="text_btn_close">Close</string>
    <string name="label_btn_Ok">Ok</string>
    <string name="label_btn_Cancel">Cancel</string>
    <string name="tv_titleTravelRoute">The trip schedule</string>
    <string name="warning_rating">Please rate and let us know your experience</string>
    <string name="thanks">Thank you for letting us know your experience</string>
    <string name="tv_title_locationInfor">Location information</string>
    <string name="toast_backpress">Press back again to exit</string>
    <string name="title_tv_copyright">Copyright by IntroTeam ©</string>
    <string name="title_tv_hotline">Hotline</string>
</resources>