<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_dialog_warning">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rating"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_dialog_warning2">

        <ImageView
            android:layout_width="@dimen/width_height_ic_warning"
            android:layout_height="@dimen/width_height_ic_warning"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center_horizontal"
            android:text="@string/title_dialog_warning_internet"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_title_warning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/text_dialog_warning_internet"
            android:textColor="@color/color_text_dialog_waring"
            android:textSize="@dimen/textSize_text_warning" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/bg_btn_close_warning"
            android:text="@string/text_btn_close"
            android:textAllCaps="false"
            android:textColor="@color/color_text_btn_warning" />

    </LinearLayout>


</LinearLayout>