<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TourIntroduceActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightAppBarLayout"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/color_text_btn_warning"
                app:expandedTitleMarginStart="@dimen/margin_15"
                app:expandedTitleMarginTop="@dimen/margin_20dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/img_tour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transitionName1"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:contentInsetStart="@dimen/none_width_height"
                    app:contentInsetStartWithNavigation="@dimen/none_width_height"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.AppCompat" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_10dp">

                <RatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/tv_titleTravelRoute"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize_title_tour_introduce"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewRoute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@font/fs_nokio_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize_content_tour_introduce" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/tv_title_cmt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/hint_edt_comment"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize_title_tour_introduce"
                    android:textStyle="bold"
                    android:transitionName="@string/transitionName3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_05"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_05"
                    android:fontFamily="@font/duru_sans_regular"
                    android:text="@string/lblSeeMore"
                    android:textColor="@drawable/click_text_seemore"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/title_dialog_rating"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize_title_tour_introduce" />

                <RatingBar
                    android:id="@+id/ratingBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5" />

                <EditText
                    android:id="@+id/edtFeedBack"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_150"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/bg_edt_feedback"
                    android:gravity="start"
                    android:hint="@string/hint_edt_comment"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="@dimen/margin_10dp"
                    android:textSize="@dimen/textSize_title_tour_introduce" />


                <com.example.duantn.view.CustomButton
                    android:id="@+id/btnSendFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/bg_btn_send_feedback"
                    android:text="@string/label_btn_Submit"
                    android:textAllCaps="false"
                    android:textColor="#0477ba" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_80" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.example.duantn.view.CustomButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:background="@drawable/bg_btn_get_started"
        android:fontFamily="@font/lato_regular"
        android:text="@string/label1_btn_get_started"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>