<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_dialog_rating">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rating"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo_bus"
            android:layout_width="@dimen/width_height_logo_bus"
            android:layout_height="@dimen/width_height_logo_bus"
            android:src="@drawable/logo_bus" />

        <TextView
            android:id="@+id/tv_title_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/paddingH_title_rating"
            android:text="@string/title_dialog_rating"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize_title_rating" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_note"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/marginTop_edt_note"
            android:background="@drawable/bg_edt_note"
            android:gravity="start"
            android:hint="@string/hint_edt_comment"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="@dimen/marginH_edt_note"
            android:paddingVertical="@dimen/marginV_edit_note"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/marginTop_btn_submit"
            android:background="@android:color/transparent"
            android:text="@string/label_btn_Submit"
            android:textAllCaps="false"
            android:textColor="@color/color_btn_submit" />
    </LinearLayout>


</LinearLayout>