<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/radius_alert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <TextView
                android:layout_width="@dimen/none_widh_heght"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_alert"
                android:textSize="@dimen/textSize_title_alert"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/glV90"
                app:layout_constraintStart_toStartOf="@id/glV10"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/content_alert"
            android:textSize="@dimen/textSize_content_alert" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/marginTop_ht_alert"
            android:background="@color/black_overlay" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV49"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.49" />

            <Button
                android:id="@+id/btn_Cacncel"
                android:layout_width="@dimen/none_widh_heght"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/label_btn_Cancel"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/glV49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glV51"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.51" />

            <Button
                android:id="@+id/btn_OK"
                android:layout_width="@dimen/none_widh_heght"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:text="@string/label_btn_OK"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/glV51"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/none_widh_heght"
                android:background="@color/black_overlay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>